Closed Bug 1615930 Opened 5 years ago Closed 5 years ago

MP4 video does not diplays the last frames of the video

Categories

(Core :: Audio/Video: Playback, defect, P1)

68 Branch
Unspecified
Android
defect

Tracking

()

RESOLVED FIXED
mozilla75
Webcompat Priority ?
Tracking Status
firefox75 --- fixed

People

(Reporter: karlcow, Assigned: jhlin)

References

()

Details

Attachments

(1 file)

The original report is about a looping video on twitter.

But we can show the issue with a link directly to the video
https://video.twimg.com/tweet_video/EOS-yMjUwAAAGB-.mp4

on macOS, with firefox nightly 75.0a1 (2020-02-16) (64-bit)
the video plays until the end.

on android with firefox preview nightly 75.0a1 20200212093201
it stops on 98 and doesn't play until the ends.

Assignee: nobody → jolin
Component: Audio/Video → Audio/Video: Playback

In current implementation of Drain(), we use the Flush() method of remote
decoder to restart it so that the decoder can accept new input again. This
will force the decoder to drop all internal buffers, including those that
are not rendered yet. It can be avoid by calling Flush() in Decode() when
the decoder is in drained state.

Priority: -- → P1
Pushed by jolin@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/0a30441180ac don't immediately flush Java decoder after draining. r=jya
Status: NEW → RESOLVED
Closed: 5 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla75

Is there any chance this has been seen on mobile versions as well? I have run into a similar issue on all 3 latest versions where the last frame triggers "Video can't be played because the file is corrupt.". Oddly I do not see this on all platforms (I've seen the issue on 3x Galaxy s10, however a oneplus 6 and a much older nexus 7 do not show the same issue)

(In reply to davidwill91 from comment #5)

Is there any chance this has been seen on mobile versions as well? I have run into a similar issue on all 3 latest versions where the last frame triggers "Video can't be played because the file is corrupt.". Oddly I do not see this on all platforms (I've seen the issue on 3x Galaxy s10, however a oneplus 6 and a much older nexus 7 do not show the same issue)

This is, in fact, a mobile-only problem.

The issue you encountered sounds different because this bug only drops frames and doesn't return an error as you described. Please file another bug for it if you want and provide more info such as the devices affected, reproduce steps, and logs. Thanks a lot!

You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: