Bug 1615930 - don't immediately flush Java decoder after draining. r=jya

In current implementation of Drain(), we use the Flush() method of remote
decoder to restart it so that the decoder can accept new input again. This
will force the decoder to drop all internal buffers, including those that
are not rendered yet. Since Flush() is called after Drain(), there is no need
to do that internally.

Differential Revision: https://phabricator.services.mozilla.com/D63912